aws_getting_started/fargate_custom_app_cloudwatch/cdk.out/HelloWorldCdkStack.template.json
{
 "Resources": {
  "HelloWorldVpcD2B4AACC": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/Resource"
   }
  },
  "HelloWorldVpcPublicSubnet1SubnetF3EB5E6D": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.0.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet1/Subnet"
   }
  },
  "HelloWorldVpcPublicSubnet1RouteTable3D1FB32F": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet1/RouteTable"
   }
  },
  "HelloWorldVpcPublicSubnet1RouteTableAssociationCE02598F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HelloWorldVpcPublicSubnet1RouteTable3D1FB32F"
    },
    "SubnetId": {
     "Ref": "HelloWorldVpcPublicSubnet1SubnetF3EB5E6D"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet1/RouteTableAssociation"
   }
  },
  "HelloWorldVpcPublicSubnet1DefaultRoute6609A036": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "HelloWorldVpcIGWF62AB4ED"
    },
    "RouteTableId": {
     "Ref": "HelloWorldVpcPublicSubnet1RouteTable3D1FB32F"
    }
   },
   "DependsOn": [
    "HelloWorldVpcVPCGWEB3C4884"
   ],
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet1/DefaultRoute"
   }
  },
  "HelloWorldVpcPublicSubnet1EIPE7132743": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet1/EIP"
   }
  },
  "HelloWorldVpcPublicSubnet1NATGateway0D370888": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "HelloWorldVpcPublicSubnet1EIPE7132743",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "HelloWorldVpcPublicSubnet1SubnetF3EB5E6D"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "HelloWorldVpcPublicSubnet1DefaultRoute6609A036",
    "HelloWorldVpcPublicSubnet1RouteTableAssociationCE02598F"
   ],
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet1/NATGateway"
   }
  },
  "HelloWorldVpcPublicSubnet2SubnetAEA87002": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.32.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet2/Subnet"
   }
  },
  "HelloWorldVpcPublicSubnet2RouteTable1AA735DF": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet2/RouteTable"
   }
  },
  "HelloWorldVpcPublicSubnet2RouteTableAssociationD8342C3A": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HelloWorldVpcPublicSubnet2RouteTable1AA735DF"
    },
    "SubnetId": {
     "Ref": "HelloWorldVpcPublicSubnet2SubnetAEA87002"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet2/RouteTableAssociation"
   }
  },
  "HelloWorldVpcPublicSubnet2DefaultRouteCBBBD8B8": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "HelloWorldVpcIGWF62AB4ED"
    },
    "RouteTableId": {
     "Ref": "HelloWorldVpcPublicSubnet2RouteTable1AA735DF"
    }
   },
   "DependsOn": [
    "HelloWorldVpcVPCGWEB3C4884"
   ],
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet2/DefaultRoute"
   }
  },
  "HelloWorldVpcPublicSubnet2EIPBAE0AAF7": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet2/EIP"
   }
  },
  "HelloWorldVpcPublicSubnet2NATGatewayCD816788": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "HelloWorldVpcPublicSubnet2EIPBAE0AAF7",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "HelloWorldVpcPublicSubnet2SubnetAEA87002"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "HelloWorldVpcPublicSubnet2DefaultRouteCBBBD8B8",
    "HelloWorldVpcPublicSubnet2RouteTableAssociationD8342C3A"
   ],
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet2/NATGateway"
   }
  },
  "HelloWorldVpcPublicSubnet3SubnetE3654016": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.64.0/19",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet3/Subnet"
   }
  },
  "HelloWorldVpcPublicSubnet3RouteTableE731E78D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet3/RouteTable"
   }
  },
  "HelloWorldVpcPublicSubnet3RouteTableAssociation717668A1": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HelloWorldVpcPublicSubnet3RouteTableE731E78D"
    },
    "SubnetId": {
     "Ref": "HelloWorldVpcPublicSubnet3SubnetE3654016"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet3/RouteTableAssociation"
   }
  },
  "HelloWorldVpcPublicSubnet3DefaultRoute68D61559": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "HelloWorldVpcIGWF62AB4ED"
    },
    "RouteTableId": {
     "Ref": "HelloWorldVpcPublicSubnet3RouteTableE731E78D"
    }
   },
   "DependsOn": [
    "HelloWorldVpcVPCGWEB3C4884"
   ],
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet3/DefaultRoute"
   }
  },
  "HelloWorldVpcPublicSubnet3EIP9A5E1667": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet3"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet3/EIP"
   }
  },
  "HelloWorldVpcPublicSubnet3NATGateway07AE284E": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "HelloWorldVpcPublicSubnet3EIP9A5E1667",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "HelloWorldVpcPublicSubnet3SubnetE3654016"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet3"
     }
    ]
   },
   "DependsOn": [
    "HelloWorldVpcPublicSubnet3DefaultRoute68D61559",
    "HelloWorldVpcPublicSubnet3RouteTableAssociation717668A1"
   ],
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PublicSubnet3/NATGateway"
   }
  },
  "HelloWorldVpcPrivateSubnet1Subnet4CF9FBD6": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1a",
    "CidrBlock": "10.0.96.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet1/Subnet"
   }
  },
  "HelloWorldVpcPrivateSubnet1RouteTable2CA6A4FE": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet1/RouteTable"
   }
  },
  "HelloWorldVpcPrivateSubnet1RouteTableAssociation8A78A76C": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HelloWorldVpcPrivateSubnet1RouteTable2CA6A4FE"
    },
    "SubnetId": {
     "Ref": "HelloWorldVpcPrivateSubnet1Subnet4CF9FBD6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "HelloWorldVpcPrivateSubnet1DefaultRouteFBDC71A4": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "HelloWorldVpcPublicSubnet1NATGateway0D370888"
    },
    "RouteTableId": {
     "Ref": "HelloWorldVpcPrivateSubnet1RouteTable2CA6A4FE"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet1/DefaultRoute"
   }
  },
  "HelloWorldVpcPrivateSubnet2SubnetD8A228E8": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1b",
    "CidrBlock": "10.0.128.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet2/Subnet"
   }
  },
  "HelloWorldVpcPrivateSubnet2RouteTable8F67AA9A": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet2/RouteTable"
   }
  },
  "HelloWorldVpcPrivateSubnet2RouteTableAssociationF089CB09": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HelloWorldVpcPrivateSubnet2RouteTable8F67AA9A"
    },
    "SubnetId": {
     "Ref": "HelloWorldVpcPrivateSubnet2SubnetD8A228E8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "HelloWorldVpcPrivateSubnet2DefaultRoute7B7DCE23": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "HelloWorldVpcPublicSubnet2NATGatewayCD816788"
    },
    "RouteTableId": {
     "Ref": "HelloWorldVpcPrivateSubnet2RouteTable8F67AA9A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet2/DefaultRoute"
   }
  },
  "HelloWorldVpcPrivateSubnet3SubnetE6D6423F": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": "us-east-1c",
    "CidrBlock": "10.0.160.0/19",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet3/Subnet"
   }
  },
  "HelloWorldVpcPrivateSubnet3RouteTable9670813C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet3"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet3/RouteTable"
   }
  },
  "HelloWorldVpcPrivateSubnet3RouteTableAssociation9EDF930D": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "HelloWorldVpcPrivateSubnet3RouteTable9670813C"
    },
    "SubnetId": {
     "Ref": "HelloWorldVpcPrivateSubnet3SubnetE6D6423F"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet3/RouteTableAssociation"
   }
  },
  "HelloWorldVpcPrivateSubnet3DefaultRoute5F20E136": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "HelloWorldVpcPublicSubnet3NATGateway07AE284E"
    },
    "RouteTableId": {
     "Ref": "HelloWorldVpcPrivateSubnet3RouteTable9670813C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/PrivateSubnet3/DefaultRoute"
   }
  },
  "HelloWorldVpcIGWF62AB4ED": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "HelloWorldCdkStack/HelloWorldVpc"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/IGW"
   }
  },
  "HelloWorldVpcVPCGWEB3C4884": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "HelloWorldVpcIGWF62AB4ED"
    },
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/VPCGW"
   }
  },
  "HelloWorldVpcRestrictDefaultSecurityGroupCustomResource97275679": {
   "Type": "Custom::VpcRestrictDefaultSG",
   "Properties": {
    "ServiceToken": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E",
      "Arn"
     ]
    },
    "DefaultSecurityGroupId": {
     "Fn::GetAtt": [
      "HelloWorldVpcD2B4AACC",
      "DefaultSecurityGroup"
     ]
    },
    "Account": "243413538688"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldVpc/RestrictDefaultSecurityGroupCustomResource/Default"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Version": "2012-10-17",
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "lambda.amazonaws.com"
       }
      }
     ]
    },
    "ManagedPolicyArns": [
     {
      "Fn::Sub": "arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
     }
    ],
    "Policies": [
     {
      "PolicyName": "Inline",
      "PolicyDocument": {
       "Version": "2012-10-17",
       "Statement": [
        {
         "Effect": "Allow",
         "Action": [
          "ec2:AuthorizeSecurityGroupIngress",
          "ec2:AuthorizeSecurityGroupEgress",
          "ec2:RevokeSecurityGroupIngress",
          "ec2:RevokeSecurityGroupEgress"
         ],
         "Resource": [
          {
           "Fn::Join": [
            "",
            [
             "arn:aws:ec2:us-east-1:243413538688:security-group/",
             {
              "Fn::GetAtt": [
               "HelloWorldVpcD2B4AACC",
               "DefaultSecurityGroup"
              ]
             }
            ]
           ]
          }
         ]
        }
       ]
      }
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role"
   }
  },
  "CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E": {
   "Type": "AWS::Lambda::Function",
   "Properties": {
    "Code": {
     "S3Bucket": "cdk-hnb659fds-assets-243413538688-us-east-1",
     "S3Key": "dd5711540f04e06aa955d7f4862fc04e8cdea464cb590dae91ed2976bb78098e.zip"
    },
    "Timeout": 900,
    "MemorySize": 128,
    "Handler": "__entrypoint__.handler",
    "Role": {
     "Fn::GetAtt": [
      "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0",
      "Arn"
     ]
    },
    "Runtime": "nodejs18.x",
    "Description": "Lambda function for removing all inbound/outbound rules from the VPC default security group"
   },
   "DependsOn": [
    "CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0"
   ],
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler",
    "aws:asset:path": "asset.dd5711540f04e06aa955d7f4862fc04e8cdea464cb590dae91ed2976bb78098e",
    "aws:asset:property": "Code"
   }
  },
  "HelloWorldRepoE9C510D7": {
   "Type": "AWS::ECR::Repository",
   "Properties": {
    "RepositoryName": "hello-world-app"
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldRepo/Resource"
   }
  },
  "HelloWorldClusterA1D58ED7": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldCluster/Resource"
   }
  },
  "HelloWorldLogGroup138672A6": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/hello-world-app",
    "RetentionInDays": 7
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete",
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldLogGroup/Resource"
   }
  },
  "HelloWorldTaskDefTaskRole8D2E907C": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldTaskDef/TaskRole/Resource"
   }
  },
  "HelloWorldTaskDefTaskRoleDefaultPolicyBB218F04": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "HelloWorldRepoE9C510D7",
         "Arn"
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "HelloWorldTaskDefTaskRoleDefaultPolicyBB218F04",
    "Roles": [
     {
      "Ref": "HelloWorldTaskDefTaskRole8D2E907C"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldTaskDef/TaskRole/DefaultPolicy/Resource"
   }
  },
  "HelloWorldTaskDef5937405E": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "PORT",
        "Value": "8080"
       }
      ],
      "Essential": true,
      "Image": {
       "Fn::Join": [
        "",
        [
         {
          "Fn::Select": [
           4,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "HelloWorldRepoE9C510D7",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".dkr.ecr.",
         {
          "Fn::Select": [
           3,
           {
            "Fn::Split": [
             ":",
             {
              "Fn::GetAtt": [
               "HelloWorldRepoE9C510D7",
               "Arn"
              ]
             }
            ]
           }
          ]
         },
         ".",
         {
          "Ref": "AWS::URLSuffix"
         },
         "/",
         {
          "Ref": "HelloWorldRepoE9C510D7"
         },
         ":latest"
        ]
       ]
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "HelloWorldLogGroup138672A6"
        },
        "awslogs-stream-prefix": "hello-world",
        "awslogs-region": "us-east-1"
       }
      },
      "Name": "HelloWorldContainer",
      "PortMappings": [
       {
        "ContainerPort": 8080,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "HelloWorldTaskDefExecutionRole88E630D4",
      "Arn"
     ]
    },
    "Family": "HelloWorldCdkStackHelloWorldTaskDef83663E48",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "HelloWorldTaskDefTaskRole8D2E907C",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldTaskDef/Resource"
   }
  },
  "HelloWorldTaskDefExecutionRole88E630D4": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldTaskDef/ExecutionRole/Resource"
   }
  },
  "HelloWorldTaskDefExecutionRoleDefaultPolicyF6122E16": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "HelloWorldRepoE9C510D7",
         "Arn"
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "HelloWorldLogGroup138672A6",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "HelloWorldTaskDefExecutionRoleDefaultPolicyF6122E16",
    "Roles": [
     {
      "Ref": "HelloWorldTaskDefExecutionRole88E630D4"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldTaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "HelloWorldServiceLB7C80B268": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "HelloWorldServiceLBSecurityGroup05C4B30B",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "HelloWorldVpcPublicSubnet1SubnetF3EB5E6D"
     },
     {
      "Ref": "HelloWorldVpcPublicSubnet2SubnetAEA87002"
     },
     {
      "Ref": "HelloWorldVpcPublicSubnet3SubnetE3654016"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "HelloWorldVpcPublicSubnet1DefaultRoute6609A036",
    "HelloWorldVpcPublicSubnet1RouteTableAssociationCE02598F",
    "HelloWorldVpcPublicSubnet2DefaultRouteCBBBD8B8",
    "HelloWorldVpcPublicSubnet2RouteTableAssociationD8342C3A",
    "HelloWorldVpcPublicSubnet3DefaultRoute68D61559",
    "HelloWorldVpcPublicSubnet3RouteTableAssociation717668A1"
   ],
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldService/LB/Resource"
   }
  },
  "HelloWorldServiceLBSecurityGroup05C4B30B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB HelloWorldCdkStackHelloWorldServiceLB92312C6F",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldService/LB/SecurityGroup/Resource"
   }
  },
  "HelloWorldServiceLBSecurityGrouptoHelloWorldCdkStackHelloWorldServiceSecurityGroup86D0A73C8080464670AD": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "HelloWorldServiceSecurityGroup5F3BD4A7",
      "GroupId"
     ]
    },
    "FromPort": 8080,
    "GroupId": {
     "Fn::GetAtt": [
      "HelloWorldServiceLBSecurityGroup05C4B30B",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 8080
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldService/LB/SecurityGroup/to HelloWorldCdkStackHelloWorldServiceSecurityGroup86D0A73C:8080"
   }
  },
  "HelloWorldServiceLBPublicListener22A49231": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "HelloWorldServiceLBPublicListenerECSGroup63BD356F"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "HelloWorldServiceLB7C80B268"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldService/LB/PublicListener/Resource"
   }
  },
  "HelloWorldServiceLBPublicListenerECSGroup63BD356F": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "HelloWorldService36ED7EB6": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "HelloWorldClusterA1D58ED7"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 2,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "HelloWorldContainer",
      "ContainerPort": 8080,
      "TargetGroupArn": {
       "Ref": "HelloWorldServiceLBPublicListenerECSGroup63BD356F"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "HelloWorldServiceSecurityGroup5F3BD4A7",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "HelloWorldVpcPrivateSubnet1Subnet4CF9FBD6"
       },
       {
        "Ref": "HelloWorldVpcPrivateSubnet2SubnetD8A228E8"
       },
       {
        "Ref": "HelloWorldVpcPrivateSubnet3SubnetE6D6423F"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "HelloWorldTaskDef5937405E"
    }
   },
   "DependsOn": [
    "HelloWorldServiceLBPublicListenerECSGroup63BD356F",
    "HelloWorldServiceLBPublicListener22A49231",
    "HelloWorldTaskDefTaskRoleDefaultPolicyBB218F04",
    "HelloWorldTaskDefTaskRole8D2E907C"
   ],
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldService/Service/Service"
   }
  },
  "HelloWorldServiceSecurityGroup5F3BD4A7": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "HelloWorldCdkStack/HelloWorldService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "HelloWorldVpcD2B4AACC"
    }
   },
   "DependsOn": [
    "HelloWorldTaskDefTaskRoleDefaultPolicyBB218F04",
    "HelloWorldTaskDefTaskRole8D2E907C"
   ],
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldService/Service/SecurityGroup/Resource"
   }
  },
  "HelloWorldServiceSecurityGroupfromHelloWorldCdkStackHelloWorldServiceLBSecurityGroup27CC287E808016D8DF3C": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 8080,
    "GroupId": {
     "Fn::GetAtt": [
      "HelloWorldServiceSecurityGroup5F3BD4A7",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "HelloWorldServiceLBSecurityGroup05C4B30B",
      "GroupId"
     ]
    },
    "ToPort": 8080
   },
   "DependsOn": [
    "HelloWorldTaskDefTaskRoleDefaultPolicyBB218F04",
    "HelloWorldTaskDefTaskRole8D2E907C"
   ],
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/HelloWorldService/Service/SecurityGroup/from HelloWorldCdkStackHelloWorldServiceLBSecurityGroup27CC287E:8080"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31SXU/rMAz9LbxnQZvgvu+OD01CUG2IV+Smptd3bVIlziZU9b/jtCutAPGU4+OT+NjOSi+XV3p5AaewMMVhUVGu2z2DOSihXls0K92+NEZt3uxLtlFZzCsy+5hb5MRNaOci4zPkFU78xK1DcIaAydlPcQK32ywdj8D3wHiCd5V5OgqcHt5aRi94FAxOztGaxeu/Gi2rPZroid/vvYtN7+FX4rb0GMI3emt7vlNovG532LhA7HxfdopSOuh2U8Ug5lJuhHfgS0hNh8MNvpGlseWvjLMMZNHPuPPdPfojmWGMA+xU5Uqp9+DKz2ZG3CmCWpy6YfD9mTlZUm95QL3d1wY4TTLoddMI2y/jwUHxFyqwBosv5bGCwGQqUeS9gmx5lN/w820/eJrFcx3JbOxZM+JZ/lkqy4LH1mZh16kdBhd9modM2NVTmBbyYyrz7khFKhECsvzmU [...]
   },
   "Metadata": {
    "aws:cdk:path": "HelloWorldCdkStack/CDKMetadata/Default"
   }
  }
 },
 "Outputs": {
  "HelloWorldServiceLoadBalancerDNS55FD1E3C": {
   "Value": {
    "Fn::GetAtt": [
     "HelloWorldServiceLB7C80B268",
     "DNSName"
    ]
   }
  },
  "HelloWorldServiceServiceURL51B6A3C0": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "HelloWorldServiceLB7C80B268",
        "DNSName"
       ]
      }
     ]
    ]
   }
  },
  "LoadBalancerURL": {
   "Value": {
    "Fn::GetAtt": [
     "HelloWorldServiceLB7C80B268",
     "DNSName"
    ]
   }
  },
  "ECRRepositoryURI": {
   "Value": {
    "Fn::Join": [
     "",
     [
      {
       "Fn::Select": [
        4,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "HelloWorldRepoE9C510D7",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".dkr.ecr.",
      {
       "Fn::Select": [
        3,
        {
         "Fn::Split": [
          ":",
          {
           "Fn::GetAtt": [
            "HelloWorldRepoE9C510D7",
            "Arn"
           ]
          }
         ]
        }
       ]
      },
      ".",
      {
       "Ref": "AWS::URLSuffix"
      },
      "/",
      {
       "Ref": "HelloWorldRepoE9C510D7"
      }
     ]
    ]
   }
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
